--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&family=Space+Mono&display=swap');
 
+body{
+  overflow-x: hidden;
+}
 .header {
   display: flex;
   align-items: center;
@@ -15,10 +18,10 @@
 }
 
 .header__logo img {
-  max-height: 60px;
+  max-height: 40px;
   height: 100%;
 
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 .header__logo h1 {
@@ -50,7 +53,11 @@
 }
 
 .header__nav--hamburguer-menu {
-  display: none;
+  display: none; 
+  width: 32px;
+  height: 2px;
+  background: #fff;
+  margin: 8px;
 }
 
 .header__nav--hover:hover {
@@ -68,12 +75,62 @@
   outline: none;
 }
 
+
 @media (max-width: 950px) {
-  .header__nav--hover {
-    display: none !important;
+  .header__nav{
+    position: absolute;
+    padding-top: 20px;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height:60vh;
+    background-color: #fff;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+  }
+
+
+
+  .header__nav--hover:hover {
+    background: #FFB30E .05;
+    color: #FFFFFF;
+    width: 100%;
+  }
+
+  .header__nav li{
+    margin-left: 0 ;
+    opacity: 0;
+  }
+  .header__nav.active{
+    transform: translateX(0);
   }
 
   .header__nav--hamburguer-menu {
-    display: unset;
+    display: block;
   } 
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.header__nav--hamburguer-menu.active .line1 {
+  transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+.header__nav--hamburguer-menu.active .line2 {
+  opacity: 0;
+}
+
+.header__nav--hamburguer-menu.line3 {
+  transform: rotate(45deg) translate(-5px, -7px);
 }
