--- a/css/principal.css
+++ b/css/principal.css
@@ -70,10 +70,10 @@
       margin: auto;
     }
     #burguer{
-        margin: auto;
+       display: none;
     }
     .menuEntrega{
-        position: relative;
+    
         width: 100%;
         height: 40px;
         padding: 10px 0 30px;
@@ -91,7 +91,7 @@
     }
     .main{
         text-align: center;
-        position: absolute;
+
     }
     .mostrar{
         padding: 50px 0 50px 20px;
@@ -102,11 +102,7 @@
     }
 
     #burguer{
-        width: auto;
-        height: auto;
-        text-align: center;
-        margin:auto;
-        position: relative;
+       display: none;
     }
     .menuEntrega{
         padding-right: 50px;
