--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -25,6 +25,7 @@ body{
 }
 
 .header__logo h1 {
+font-weight:bold;
   font-size: 1.5rem;
   color: #FFB30E;
 }
@@ -43,6 +44,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+ text-transform:uppercase;
 
   height: 80px;
   color: #FFB30E;
@@ -94,14 +96,14 @@ body{
 
 
   .header__nav--hover:hover {
-    background: #FFB30E .05;
+    background: #FFB30E;
     color: #FFFFFF;
     width: 100%;
   }
 
   .header__nav li{
+    display: block;
     margin-left: 0 ;
-    opacity: 0;
   }
   .header__nav.active{
     transform: translateX(0);
@@ -110,27 +112,4 @@ body{
   .header__nav--hamburguer-menu {
     display: block;
   } 
-}
-
-@keyframes navLinkFade {
-  from {
-    opacity: 0;
-    transform: translateX(50px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-.header__nav--hamburguer-menu.active .line1 {
-  transform: rotate(-45deg) translate(-8px, 8px);
-}
-
-.header__nav--hamburguer-menu.active .line2 {
-  opacity: 0;
-}
-
-.header__nav--hamburguer-menu.line3 {
-  transform: rotate(45deg) translate(-5px, -7px);
 }
