--- a/css/principal.css
+++ b/css/principal.css
@@ -47,6 +47,12 @@
 
      text-decoration: none;
 }
+
+.entregaActive{
+    background-color: rgba(255, 179, 14, 0.438);
+    padding: 20px;
+    border-radius: 15px;
+}
  
 #Burguer{
     box-sizing: border-box;
