--- a/css/btnMenu.css
+++ b/css/btnMenu.css
@@ -1,15 +1,22 @@
-.btnMenu_Open {
-    display: block;
-    background-image: url(/img/btnMenu.png);
+
+.btnMenu{
     background-repeat: no-repeat;
     background-position: 15px center;
     text-indent: -9999px;
     padding: 20px 15px;
 }
 
-.btnMenu_Close{
-    background-color: #747c81;
-    background-image: url(/img/btnMenu.png);
-    background-repeat: no-repeat;
-    padding: 20px 15px;
+    
+@media (max-width: 950px) {
+    .btnMenu_open {
+    display: block;
+    background-image: url(../img/hamburguer-menu.svg);
+   
+}
+
+    .btnMenu_close{
+    width: 100%;
+    background-color: #FFB30E;
+    background-image: url(../img/hamburguer-menu.svg);
+}
 }
