--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -40,6 +40,7 @@ font-weight:bold;
   gap: 20px;
 }
 
+
 .header__nav li a {
   display: flex;
   align-items: center;
@@ -51,16 +52,9 @@ font-weight:bold;
   text-decoration: none;
 
   transition: all 0.2s;
-  padding: 0 0.75rem;
+  padding: 0 0.50rem;
 }
 
-.header__nav--hamburguer-menu {
-  display: none; 
-  width: 32px;
-  height: 2px;
-  background: #fff;
-  margin: 8px;
-}
 
 .header__nav--hover:hover {
   background: #FFB30E;
@@ -80,20 +74,30 @@ font-weight:bold;
 
 @media (max-width: 950px) {
   .header__nav{
+    display: block;
     position: absolute;
     padding-top: 20px;
-    top: 8vh;
-    right: 0;
-    width: 50vw;
-    height:60vh;
+    top: 0;
+   
+    width: 100%;
+    height:100%;
     background-color: #fff;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    transition: transform -200ms linear;
     transform: translateX(100%);
   }
 
-
+.menu-item{
+  
+  justify-content: space-around;
+  border-bottom: 1px solid rgba(255, 179, 14, 0.8);
+}
+  .header__nav--input-search{
+    margin-left: 90px;
+    padding: 40px;
+  }
 
   .header__nav--hover:hover {
     background: #FFB30E;
@@ -103,13 +107,11 @@ font-weight:bold;
 
   .header__nav li{
     display: block;
+    width: 100%;
     margin-left: 0 ;
   }
   .header__nav.active{
-    transform: translateX(0);
+    transform: translateX(0%);
   }
 
-  .header__nav--hamburguer-menu {
-    display: block;
-  } 
 }
